clang/test/BSC/Negative/Trait/r3/impl_trait_for_generic_type/impl_trait_for_generic_type.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
_Trait F{};

struct S<T> {};
union U<T> {};
_Impl _Trait F for S<T>; // expected-error {{use of undeclared identifier 'T'}}
_Impl _Trait F for struct S<T>; // expected-error {{use of undeclared identifier 'T'}}
_Impl _Trait F for S<int>; // expected-error {{cannot _Impl _Trait for an instantiated type}}
_Impl _Trait F for struct S<int>; // expected-error {{cannot _Impl _Trait for an instantiated type}}
_Impl _Trait F for U<T>; // expected-error {{use of undeclared identifier 'T'}}
_Impl _Trait F for union U<T>; // expected-error {{use of undeclared identifier 'T'}}
_Impl _Trait F for U<int>; // expected-error {{cannot _Impl _Trait for an instantiated type}}
_Impl _Trait F for union U<int>; // expected-error {{cannot _Impl _Trait for an instantiated type}}

_Owned struct K<T> {};
_Impl _Trait F for K<T>; // expected-error {{use of undeclared identifier 'T'}}
_Impl _Trait F for K<int>; // expected-error {{cannot _Impl _Trait for an instantiated type}}

struct M {
    U<int> u;
    S<int> s;
    K<int> k;
};
_Impl _Trait F for U<int>; // expected-error {{cannot _Impl _Trait for an instantiated type}}
_Impl _Trait F for union U<int>; // expected-error {{cannot _Impl _Trait for an instantiated type}}
_Impl _Trait F for S<int>; // expected-error {{cannot _Impl _Trait for an instantiated type}}
_Impl _Trait F for struct S<int>; // expected-error {{cannot _Impl _Trait for an instantiated type}}
_Impl _Trait F for K<int>; // expected-error {{cannot _Impl _Trait for an instantiated type}}